# kanatrans

./: .envrc.sample  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  docker-bake.hcl
.github/: dependabot.yml
.github/workflows/: bump.yml  cd.yml  ci.yml  tag.yml
crates/adapter/: Cargo.toml
crates/adapter/src/: command.rs  converter.rs  error.rs  lib.rs
crates/adapter/src/processor/: conversion_table.rs  lex_lookup.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  lib.rs  options.rs  runner.rs
crates/domain/: Cargo.toml
crates/domain/src/: arpabet.rs  errors.rs  katakana.rs  lib.rs
crates/domain/src/processor/: mod.rs  transcriber.rs  transliterator.rs
crates/domain/src/request/: katakana.rs  mod.rs
crates/domain/src/response/: arpabet.rs  katakana.rs  mod.rs
crates/flite/: Cargo.toml
crates/flite-src/: Cargo.toml
crates/flite-src/src/: lib.rs
crates/flite-sys/: Cargo.toml  build.rs
crates/flite-sys/src/: lib.rs
crates/flite-sys/src/cmu_grapheme_lang/: mod.rs
crates/flite-sys/src/cmu_grapheme_lex/: mod.rs
crates/flite-sys/src/cmu_indic_lang/: mod.rs
crates/flite-sys/src/cmu_indic_lex/: mod.rs
crates/flite-sys/src/cmulex/: mod.rs
crates/flite-sys/src/usenglish/: mod.rs
crates/flite/src/: lexicon.rs  lib.rs  lts.rs
crates/kanatrans/: Cargo.toml
crates/kanatrans-cli/: Cargo.toml
crates/kanatrans-cli/src/: main.rs
crates/kanatrans-web-app/: Cargo.toml
crates/kanatrans-web-app/src/: main.rs
crates/kanatrans-web-app/src/command/: command.rs  serve.rs
crates/kanatrans/src/: main.rs
crates/kanatrans/src/adapter/: command.rs  converter.rs  mod.rs
crates/kanatrans/src/adapter/processor/: conversion_table.rs  lex_lookup.rs  mod.rs
crates/kanatrans/src/command/: cli.rs  command.rs  mod.rs  serve.rs
crates/kanatrans/src/domain/: arpabet.rs  errors.rs  katakana.rs  mod.rs  phoneme_pair.rs
crates/kanatrans/src/domain/processor/: mod.rs  transcriber.rs
crates/kanatrans/src/domain/request/: katakana.rs  mod.rs
crates/kanatrans/src/domain/response/: arpabet.rs  mod.rs
crates/kanatrans/src/infrastructure/: mod.rs  router.rs
crates/kanatrans/src/infrastructure/service/: arpabet.rs  katakana.rs
crates/phoneme/: Cargo.toml
crates/phoneme/src/: assembler.rs  error.rs  lib.rs  phoneme.rs  phoneme_pair.rs
crates/phoneme/src/consonant/: consonant.rs  mod.rs  pattern.rs
crates/phoneme/src/consonant/cluster/: cluster.rs  mod.rs  pattern.rs
crates/phoneme/src/vowel/: extension.rs  mod.rs  pattern.rs  vowel.rs
crates/server/: Cargo.toml
crates/server/src/: arpabet.rs  error.rs  katakana.rs  lib.rs  router.rs
crates/service/: Cargo.toml
crates/service/src/: arpabet.rs  error.rs  katakana.rs  lib.rs  routing.rs  service.rs
crates/service/src/arpabet/: tests.rs
crates/service/src/katakana/: tests.rs
crates/service/src/routing/: tests.rs
crates/service/src/tests/: mod.rs
crates/service/tests/: main.rs
crates/service/tests/integration/routing/: arpabet.rs  katakana.rs  mod.rs
crates/service/tests/routing/: arpabet.rs
crates/try-wasi-flite/: Cargo.toml
crates/try-wasi-flite/src/: main.rs
src/: main.rs
src/adapter/: command.rs  converter.rs  mod.rs
src/adapter/processor/: conversion_table.rs  lex_lookup.rs
src/domain/: alpabet.rs  arpabet.rs  errors.rs  katakana.rs  mod.rs  phoneme_pair.rs
src/domain/processor/: transcriber.rs  transliterator.rs
src/domain/response/: alpabet.rs  arpabet.rs  katakana.rs  mod.rs
src/infrastructure/: alpabet.rs  arpabet.rs  katakana.rs  router.rs
src/infrastructure/service/: alpabet.rs  arpabet.rs  katakana.rs  mod.rs
