[workspace]
members = [
    "crates/adapter",
    "crates/cli",
    "crates/domain",
    "crates/flite",
    "crates/flite-src",
    "crates/flite-sys",
    "crates/kanatrans",
    "crates/phoneme",
    "crates/server",
    "crates/service",
]
default-members = ["crates/kanatrans"]
resolver = "2"

[workspace.package]
version = "0.2.4"

[workspace.dependencies.anyhow]
version = "1.0.95"

[workspace.dependencies.clap]
version = "4.5.26"
features = ["derive"]

[workspace.dependencies.domain]
path = "crates/domain"

[workspace.dependencies.phoneme]
path = "crates/phoneme"

[workspace.dependencies.thiserror]
version = "2.0.11"

[workspace.dependencies.serde]
version = "1.0.217"
features = ["derive"]

[workspace.dependencies.pretty_assertions]
version = "1.4.1"

[workspace.dependencies.tracing]
version = "0.1.41"

[workspace.dependencies.service]
path = "crates/service"

[workspace.dependencies.tokio]
version = "1.43.0"
