[workspace]
members = [
    "crates/adapter",
    "crates/cli",
    "crates/domain",
    "crates/flite",
    "crates/flite-src",
    "crates/flite-sys",
    "crates/kanatrans",
    "crates/phoneme",
    "crates/server",
    "crates/service",
]
default-members = ["crates/kanatrans"]
resolver = "3"

[workspace.package]
version = "0.2.6"

[workspace.dependencies.adapter]
path = "crates/adapter"

[workspace.dependencies.anyhow]
version = "1.0.101"

[workspace.dependencies.clap]
version = "4.5.54"
features = ["derive"]

[workspace.dependencies.domain]
path = "crates/domain"

[workspace.dependencies.phoneme]
path = "crates/phoneme"

[workspace.dependencies.thiserror]
version = "2.0.18"

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.pretty_assertions]
version = "1.4.1"

[workspace.dependencies.tracing]
version = "0.1.41"

[workspace.dependencies.service]
path = "crates/service"

[workspace.dependencies.tokio]
version = "1.49.0"

[workspace.dependencies.mockall]
version = "0.14.0"

[profile.dev.package."*"]
debug = false
