[package]
name = "adapter"
edition = "2021"

[features]
vendored = ["flite/vendored"]

[dependencies.anyhow]
workspace = true

[dependencies.domain]
path = "../domain"

[dependencies.flite]
path = "../flite"

[dependencies.itertools]
version = "0.13.0"

[dependencies.phoneme]
path = "../phoneme"

[dependencies.thiserror]
version = "1.0.61"

[dev-dependencies.mockall]
version = "0.12.1"

[dev-dependencies.pretty_assertions]
version = "1.4.0"
