[package]
name = "adapter"
edition = "2021"

[lib]
doctest = false

[features]
vendored = ["flite/vendored"]

[dependencies.anyhow]
workspace = true

[dependencies.domain]
workspace = true

[dependencies.flite]
path = "../flite"

[dependencies.itertools]
version = "0.14.0"

[dependencies.phoneme]
workspace = true

[dependencies.thiserror]
workspace = true

[dev-dependencies.mockall]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true
