[package]
name = "kanatrans-cli"
edition = "2021"

[package.version]
workspace = true

[features]
vendored = ["adapter/vendored"]

[dependencies.adapter]
path = "../adapter"

[dependencies.cli]
path = "../cli"

[dependencies.service]
workspace = true

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread"]
