[package]
name = "kanatrans"
edition = "2021"

[package.version]
workspace = true

[features]
vendored = ["adapter/vendored"]

[dependencies.adapter]
path = "../adapter"

[dependencies.domain]
workspace = true

[dependencies.phoneme]
workspace = true

[dependencies.service]
workspace = true

[dependencies.server]
path = "../server"

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread"]

[dependencies.time]
version = "0.3.36"
features = ["macros"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter", "time"]

[dependencies.tracing]
workspace = true
