[package]
name = "kanatrans"
edition = "2021"

[package.version]
workspace = true

[features]
default = ["cli", "server"]
vendored = ["adapter/vendored"]

[dependencies.adapter]
path = "../adapter"

[dependencies.clap]
workspace = true

[dependencies.cli]
path = "../cli"
optional = true

[dependencies.domain]
workspace = true

[dependencies.phoneme]
workspace = true

[dependencies.service]
workspace = true

[dependencies.server]
path = "../server"
optional = true

[dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread"]

[dependencies.time]
version = "0.3.36"
features = ["macros"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter", "time"]

[dependencies.tracing]
workspace = true
