[package]
name = "server"
edition = "2024"

[lib]
doctest = false

[dependencies.anyhow]
workspace = true

[dependencies.axum]
version = "0.8.4"

[dependencies.serde]
workspace = true

[dependencies.service]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tokio]
workspace = true
features = ["net", "signal"]

[dependencies.tower-http]
version = "0.6.4"
features = ["trace"]

[dependencies.tracing]
workspace = true
