[package]
name = "service"
edition = "2024"

[lib]
doctest = false

[dependencies.anyhow]
workspace = true

[dependencies.axum]
version = "0.8.3"
default-features = false
features = ["json", "query"]

[dependencies.domain]
workspace = true

[dependencies.problem_details]
version = "0.8.0"
features = ["axum"]

[dependencies.serde]
workspace = true

[dependencies.serde_json]
version = "1.0.140"

[dependencies.thiserror]
workspace = true

[dependencies.tokio]
workspace = true
features = ["macros", "rt"]

[dependencies.tracing]
workspace = true

[dev-dependencies.adapter]
workspace = true

[dev-dependencies.futures]
version = "0.3.31"

[dev-dependencies.http-body-util]
version = "0.1.3"

[dev-dependencies.mockall]
workspace = true

[dev-dependencies.tower]
version = "0.5.2"
features = ["util"]
